========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-06-03

 - Added an example for how to run the importers explictly via a Python script
   calling the ingest() function.
 - Fixed bug with explicit invocation of importers via ingest() function when
   calling the 'file' sub command.
 - Some installations of pdfminer install 'pdf2txt.py' as 'pdf2txt'. Adjusted
   ingestion example scripts.


2020-06-02

 - Modified recently added --no-cache option to also delete the cache if it
   exists. Honor the same environment variables. The motivation behind this
   change is that while --no-cache is useful for debugging plugins, it can be
   disconcerting that if you remove it on the next run it picks up the old
   existing cache. Deleting it on usage of --no-cache is reasonable behavior and
   avoids the introduction of a --clear-cache option; this should be sufficient.


2020-05-25

 - Fixed #449: Added options to bean-check: --no-cache and --cache-filename to
   override the cache location. These are added to bean-check only and are
   useful during development. The 'BEANCOUNT_DISABLE_LOAD_CACHE' and
   'BEANCOUNT_LOAD_CACHE_FILENAME' environment variables are still honored by
   the loader and work across all other programs.


2020-05-23

 - Fixed #184: Added explicit test for Inventory.average().
 - Fixed #404: Iex price source not working any more.
 - Fixed #281: Query "id" column does not identify transactions uniquely. Made
   the default hash_entry() function include metadata. Exclude metadata and
   derived fields explicitly in the context of comparison.
 - Fixed #182: Eliding an amount with total price raises TypeError.
 - Added options to filter accounts in "onecommodity" plugin: skip accounts with
   explicitly declared commodities, metadata of "onecommodity: FALSE" and added
   regular expression to specify the list of accounts to match (default: all).


2020-05-22
