@@ -278,7 +278,7 @@ def add_arguments(parser):
                         help="Don't overwrite destination files with the same name.")
 
 
-def run(args, parser, importers_list, files_or_directories, detect_duplicates_func=None):
+def run(args, parser, importers_list, files_or_directories, hooks=None):
     """Run the subcommand."""
 
     # If the output directory is not specified, move the files at the root where
